fixed navbar spacing

--- a/src/components/styles/Me.css
+++ b/src/components/styles/Me.css
@@ -1,18 +1,19 @@
 .me {
   height: calc(100vh - 120px);
-  /* margin-top: 120px; */
+  margin-top: 120px;
 }
 .me .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #0e1625;
+  /* background-color: #28303f; */
   color: #dddddd;
 }
 .me .flex {
   justify-content: center;
   flex-direction: column;
+  margin-bottom: 2rem;
 }
 .me h1 {
   font-size: 4.2rem;
@@ -80,7 +81,7 @@ button {
 
 @media (max-width: 768px) {
   .me {
-    margin-top: 140px;
+    margin-top: 30px;
   }
   .me .flex {
     text-align: center;
